--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,70 +2,49 @@
 		<br>
 		
 		
-		<footer class="page-footer font-small blue pt-4" style="background-color: #d9d9d9;">
-
-		  <!-- Footer Links -->
-		  <div class="container-fluid text-center text-md-left">
-
-			<!-- Grid row -->
+		<footer class="page-footer font-small blue pt-4" style="background-color: #001a33;">
 			<div class="row">
-
-			  <!-- Grid column -->
-			  <div class="col-md-6 mt-md-0 mt-3">
-
-
-
-			  </div>
-			  <!-- Grid column -->
-
-			  <hr class="clearfix w-100 d-md-none pb-3">
-
-			  <!-- Grid column -->
-			  <div class="col-md-3 mb-md-0 mb-3">
-
-				<!-- Links -->
-				<h5 class="text-uppercase"><strong>About <font color="red">E</font><font color="blue">b</font><font color="yellow">i</font><font color="green">d</font> </strong></h5>
-
-				<ul class="list-unstyled">
-				  <li>
-					<a href="#!">Company Info</a>
-				  </li>
-				  <li>
-					<a href="#!">News</a>
-				  </li>
-				  <li>
-					<a href="#!">Carrers</a>
-				  </li>
-				</ul>
-
-			  </div>
-			  <!-- Grid column -->
-
-			  <!-- Grid column -->
-			  <div class="col-md-3 mb-md-0 mb-3">
-
-				<!-- Links -->
-				<h5 class="text-uppercase"><strong> Help & Contact </strong></h5>
-
-				<ul class="list-unstyled">
-				  <li>
-					<a href="#!">Contact us</a>
-				  </li>
-				  <li>
-					<a href="#!">Help</a>
-				  </li>
-				</ul>
-
-			  </div>
-			  <!-- Grid column -->
-
+				<div class="col">
+		
+		
+		
+		
+				</div>
+				<div class="col">
+				
+				
+				
+				
+				
+				
+				</div>
+				<div class="col">
+				
+				
+			
+				
+				</div>
+				<div class="col">
+					<font color="white"><h4>Βρείτε μας στα</h4></font>
+					<br>
+					
+					
+					<font color="white"><i class="fab fa-facebook fa-2x"> <font color= #001a33>.</font></i></font>
+					<font color="white"><i class="fab fa-twitter fa-2x"> <font color= #001a33>.</font></i></font>
+					<font color="white"><i class="fab fa-instagram fa-2x"> </i></font>
+						
+				</div>
+				
+				
 			</div>
-			<!-- Grid row -->
-
-		  </div>
-		  <!-- Footer Links -->
-
-
+			<br>
+			
+			
+			<div align="center">
+						
+				<font color="white"><h5>Oasa : EAM Team 2019 - 2020</h5> </font>
+				<br>		
+			</div>
 		</footer>
 
 
