--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -12,59 +12,67 @@
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		
+		
+		
+		
 	</head>
 
 	<body>
-	
-	
-	
-	
-		<div class="bg-top navbar-light">
-			<div class="container">
-				<div class="row no-gutters d-flex align-items-center align-items-stretch">
-					<div class="col-md-4 d-flex align-items-center py-4">
-						<a class="navbar-brand" href="/">Oasa</a>
-					</div>
-					<div class="col-lg-8 d-block">
-						<div class="row d-flex">
-							<div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
-								<div class="icon d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
-								<div class="text">
-									<span>Email</span>
-									<span>youremail@email.com</span>
-								</div>
-							</div>
-							<div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
-								<div class="icon d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-								<div class="text">
-									<span>Call</span>
-									<span>Call Us: + 1235 2355 98</span>
-								</div>
-							</div>
-                            <div class="col-md topper d-flex align-items-center justify-content-end">
-								<p class="mb-0 d-block">
-									<a href="/egxeiridio" class="btn py-2 px-3 btn-primary">
-										<span>Εγχειρίδιο Χρήσης</span>
-									</a>
-
-									<a href="/home_en" class="btn py-2 px-3 btn-primary">
-										<span>ENGLISH</span>
-									</a>
-								</p>
-							</div>
+		
+		
+		
+		<div class="container">
+			<div class="row">
+				<div class="col">
+				
+				
+					<a class="nav-link" href="/"><h2><font color="blue"><i class="fa fa-bus"></i></font><b> <font color="black">Ο</font><font color="blue">Α</font><font color="black">ΣΑ</font> </b></h2></a>
+					<br>
+				
+				</div>
+				<div class="col">
+					
+					<h3>   </h3>
+					<font color="blue"><i class="fa fa-paper-plane-o fa-lg" aria-hidden="true"> </i></font> <b><font color="black"> Email </font> </b>
+					<br>
+					Oasa@gmail.com
+		 
+				</div>
+				<div class="col">
+				
+					<h3>   </h3>
+					<font color="blue"><i class="fa fa-phone fa-lg" aria-hidden="true"> </i></font> <b><font color="black"> Τηλέφωνο </font> </b>
+					<br>
+					210 25 10025
+				
+				</div>
+				<div class="col">
+					<div class="row">
+						<div class="col">
+							<p> </p>
+							<br>
+							<a class="btn btn-primary active btn-sm" href="/error_page" role="button">Εύκολη Λειτουργία</a>
+						</div>
+					
+						<div class="col">
+							<p> </p>
+							<br>
+							<a class="btn btn-primary active btn-sm" href="/home_en" role="button">English</a>
 						</div>
 					</div>
 				</div>
-			  </div>
+			</div>
 		</div>
 		
 		
 		
+		
+		
+		
 	
-		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d9d9d9;">
-		  <a class="navbar-brand" href="/"><b>OASA</b></a>
-		  
-		  
+		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #001a33;">
+		<div class="container"> 
+
 		  
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -74,12 +82,21 @@
 				<ul class="navbar-nav">
 					  
 					  
-					<li class="nav-item dropdown active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Δρομολόγια
+					<li class="nav-item dropdown">  
+						<li class="nav-item active">
+						<a class="nav-link" href="/"><font color="white"><i class="fa fa-home"></i> Αρχική </font></a>
+						</li>
+					</li>
+					
+					
+					
+					<li class="nav-item dropdown">
+						
+						<a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						  <font color="white">Δρομολόγια </font>
 						</a>
 						
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<div class="dropdown-menu"  aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/anazitisi_diadromis">Δρομολόγια/Στάσεις</a>
 						  <a class="dropdown-item" href="/24wra_leoforeia">24ωρα Δρομολόγια</a>
 						  <a class="dropdown-item" href="/nyxterina_dromologia">Νυχτερινά δρομολόγια</a>
@@ -92,7 +109,7 @@
 					
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Εισιτήρια/Κάρτες 
+						  <font color="white">Εισιτήρια/Κάρτες </font>
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -107,7 +124,7 @@
 					  
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  ΑμεΑ
+						  <font color="white">ΑμεΑ </font>
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -118,13 +135,13 @@
 					
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="/anakoinoseis">Ανακοινώσεις</a>
+						<a class="nav-link" href="/anakoinoseis"><font color="white">Ανακοινώσεις </font></a>
 					</li>			
 					
 					
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Επικοινωνία
+						  <font color="white">Επικοινωνία </font>
 						</a>
 						
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -138,6 +155,10 @@
 		    </div>
 			
 			
+			
+			
+			
+
 			<% if(typeof currentUser !== "undefined") {   %>  
 				<ul class="navbar-nav">
 					
@@ -159,23 +180,39 @@
 
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="/logout"> <i class="fa fa-sign-out fa-xs"></i> Αποσύνδεση</a>
+						<a class="nav-link" href="/logout"><font color="white"><i class="fa fa-sign-out fa-ms"></i> Αποσύνδεση </font></a>
 					</li>
 				</ul>
 		    <% }else{ %>
 				<ul class="navbar-nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="/login"><i class="fa fa-sign-in fa-xs"></i> Σύνδεση</a>
+						<a class="nav-link" href="/login"><font color="white"><i class="fa fa-sign-in fa-md"></i> Σύνδεση </font></a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="/register"><i class="fa fa-user-plus fa-xs"></i> Εγγραφή</a>
+						<a class="nav-link" href="/register"><font color="white"><i class="fa fa-user-plus fa-md"></i> Εγγραφή </font></a>
 					</li>
 				</ul>
       	    <% } %>
 
+		</div>
 		</nav>
 		
 		
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 	<% if(error && error.length) { %>
