--- a/views/staseis_amea.ejs
+++ b/views/staseis_amea.ejs
@@ -1,12 +1,38 @@
 <% include partials/header.ejs %>
 
 
-
-<div class="container">
-
-	<h5>Στάσεις με προεξοχές για τη βοήθεια ανθρώπων με κινητικές δυσκολίες. </h5>
-	<br>
-
+<br><br>
+	<div class="container">
+		<div align="center">
+			<h4><b>Στάσεις με προεξοχές για τη βοήθεια ανθρώπων με κινητικές δυσκολίες. </b></h4>
+		</div>
+		<br><br>
+		
+		<div class="row">
+			<div class="col">
+				<div align="center">
+					<div class="card" style="width:350px; height:250px;">
+					
+						<img class="card-img-top" height="250" width="250" src="http://www.oasa.gr/images/el/bus2.jpg" alt="Card image cap">
+					
+					</div>
+				</div>
+			</div>
+			<div class="col">
+				<div align="center">
+					<div class="card" style="width:350px; height:250px;">
+					
+						<img class="card-img-top" height="250" width="250" src="http://www.oasa.gr/images/el/bus1.jpg" alt="Card image cap">
+				
+					</div>
+				</div>
+			</div>
+		</div>
+		
+		
+	
+		
+		<br><br><br>
 		<table class="table">
 			<thead class="thead-dark">
 				<tr>
@@ -34,7 +60,7 @@
 		Για τις στάσεις και τους ισχύοντες πίνακες δρομολογίων μπορείτε να ενημερώνεστε και απο την τηλεφωνική γραμμή 185.
 		</p>
 
-</div>
+	</div>
 
 
 
