--- a/views/anazitisi_diadromis.ejs
+++ b/views/anazitisi_diadromis.ejs
@@ -16,7 +16,7 @@
 						
 					<div class="form-group">
 						<label for="">Απο:</label>
-						<input type="text" class="form-control" name = "dromologio[afetiria]" id="exampleInputEmail1" placeholder="Ζωγραφου">
+						<input type="text" class="form-control" name = "dromologio[afetiria]" id="exampleInputEmail1" placeholder="Ζωγραφου" required>
 						<p><small>Το πρώτο γράμμα <font color= "red">ΚΕΦΑΛΑΙΟ</font> και χωρίς <font color= "red">ΤΟΝΟΥΣ</font>.</small></p>
 					</div>
 						  
@@ -24,7 +24,7 @@
 					
 					<div class="form-group">
 						<label for="">Προς:</label>
-						<input type="text" class="form-control" name = "dromologio[terma]" id="exampleInputPassword1" placeholder="Συνταγμα">
+						<input type="text" class="form-control" name = "dromologio[terma]" id="exampleInputPassword1" placeholder="Συνταγμα" required>
 						<p><small>Το πρώτο γράμμα <font color= "red">ΚΕΦΑΛΑΙΟ</font> και χωρίς <font color= "red">ΤΟΝΟΥΣ</font>.</small></p>
 					</div>
 
@@ -46,7 +46,7 @@
 						
 					<div class="form-group">
 						<label for="">Στάση:</label>
-						<input type="text" class="form-control" name = "dromologio[stasi]" id="exampleInputEmail1" placeholder="Παλατακι">
+						<input type="text" class="form-control" name = "dromologio[stasi]" id="exampleInputEmail1" placeholder="Παλατακι" required>
 						<p><small>Το πρώτο γράμμα <font color= "red">ΚΕΦΑΛΑΙΟ</font> και χωρίς <font color= "red">ΤΟΝΟΥΣ</font>.</small></p>
 					</div>
 
