--- a/views/my_account.ejs
+++ b/views/my_account.ejs
@@ -4,7 +4,7 @@
 <div class="container">
 	<div class="jumbotron">
 		<div class="container">
-			<h2 style="text-align: center; color: black;"> My Account </h2>
+			<h2 style="text-align: center; color: black;"> Ο Λογαριασμός μου </h2>
 			<br>
 			<br>
 					
