--- a/views/pliromi.ejs
+++ b/views/pliromi.ejs
@@ -4,9 +4,12 @@
 
 
 	<div class="container">
-		<h3 align="center"><b> ΣΕΛΙΔΑ ΠΛΗΡΩΜΗΣ </b></h3>
-		<br>
+		<div class="progress">
+			<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 66%"> 2/3 Πληρωμή</div>
+		</div>
 
+	
+		<br><br>
 		<% if( p === "1"){ %>
 			<div class="row">
 				<div class="col">
