--- a/views/agora_eisitirion.ejs
+++ b/views/agora_eisitirion.ejs
@@ -3,9 +3,13 @@
 
 <div class="container">
 
-	<h3 align="center" ><b> Αγορά εισιτηρίων </b></h3>
+	
+	<div class="progress">
+		<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 33%"> 1/3 Επιλογή Κομίστρων</div>
+	</div>
+	
+	
 	<br><br>
-
 	<% if(typeof currentUser !== "undefined") {   %>
 	
 		<form action="/agora_eisitirion/<%= currentUser._id %>" method="POST">
