--- a/views/epanafortisi_kartas.ejs
+++ b/views/epanafortisi_kartas.ejs
@@ -2,11 +2,15 @@
 
 
 <div class="container">
-
-	<h3 align="center" ><b> Επαναφόρτιση κάρτας </b></h3>
-	<br><br>
 	
-
+	
+	<div class="progress">
+		<div class="progress-bar progress-bar-striped progress-bar-animated bg-success" role="progressbar" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width: 33%"> 1/3 Επιλογή Κομίστρων</div>
+	</div>
+	
+	
+	
+	<br><br>
 	<% if(typeof currentUser !== "undefined") {   %>
 	
 		<form action="/epanafortisi_kartas/<%= currentUser._id %>" method="POST">
