--- a/views/oi_agores_mou.ejs
+++ b/views/oi_agores_mou.ejs
@@ -29,6 +29,7 @@
 				</tbody>
 			</table>
 			
+			<a class="btn btn-danger btn-sm" href="/diagrafi_agorwn/<%= currentUser._id+"+"+"1"%>" role="button">Διαγραφή Ιστορικού</a>
 		
 		<% }else{ %>
 			<h3>Δεν έχουν γίνει επαναφορτίσεις κάρτας. </h3>
@@ -65,6 +66,9 @@
 					 <% })  %>
 				</tbody>
 			</table>
+			
+			<a class="btn btn-danger btn-sm" href="/diagrafi_agorwn/<%= currentUser._id+"+"+"2"%>" role="button">Διαγραφή Ιστορικού</a>
+			
 		<% }else{ %>
 			<h3>Δεν έχουν γίνει αγορές εισιτηρίων. </h3>
 			<br><br><br><br><br><br><br><br><br><br>
