--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,6 @@
 <% include partials/header.ejs %>
 
+<link rel="stylesheet" type="text/css" href="/login.css">
 
 
 <br>
@@ -98,7 +99,7 @@
 		  <div class="card" style="background-color: #e6e6e6">
 			<img class="card-img-top" height="180" width="100" src="https://s.kathimerini.gr/resources/2018-08/08s1metr-thumb-large.jpg" alt="Card image cap">
 			<div class="card-body">
-			  <h3 style="text-align: center; color: black;" class="card-title">  <a href="#" class="btn btn-outline-primary" role="button"><b>Σταθμοί έκδοσης καρτών</b></a>   </h3>
+			  <h3 style="text-align: center; color: black;" class="card-title">  <a href="/stathmoi_ekdosis" class="btn btn-outline-primary" role="button"><b>Σταθμοί έκδοσης καρτών</b></a>   </h3>
 			</div>
 		  </div>
 		</div>	
@@ -149,15 +150,15 @@
 		
 		
 		<div class="col">
-			<div class="card" style="width:230px; height:150px; background-color: #001a33;">
+			<div id="id1" class="card" style="width:230px; height:150px;">
 				<div align="center">
 					<br>
-					<font color="white"><i class="fas fa-bus-alt fa-2x"></i></font>
+					<font color=#001a33><i class="fas fa-bus-alt fa-2x"></i></font>
 					<br>
 					<div class="counter">
 						
-						<font color="white"><h2 class="counter-count">880 </h2> </font>
-						<font color="white"><b><p>Λεωφορεία</p></b></font>
+						<font color=#001a33><h2 class="counter-count">880 </h2> </font>
+						<font color=#001a33><b><p>Λεωφορεία</p></b></font>
 						
 					</div>
 				</div>
@@ -165,15 +166,15 @@
 		</div>
 		
 		<div class="col">
-			<div class="card" style="width:230px; height:150px; background-color: #001a33;">
+			<div id="id2" class="card" style="width:230px; height:150px;">
 				<div align="center">
 					<br>
-					<font color="white"><i class="fas fa-walking fa-2x"></i></font>
+					<font color=#001a33><i class="fas fa-walking fa-2x"></i></font>
 					<br>
 					<div class="counter">
 						
-						<font color="white"><h2 class="counter-count">600000</h2> </font>
-						<font color="white"><b><p>Eπιβάτες</p></b></font>
+						<font color=#001a33><h2 class="counter-count">600000</h2> </font>
+						<font color=#001a33><b><p>Eπιβάτες</p></b></font>
 						
 					</div>
 				</div>
@@ -182,15 +183,15 @@
 		
 		
 		<div class="col">
-			<div class="card" style="width:230px; height:150px; background-color: #001a33;">
+			<div id="id3" class="card" style="width:230px; height:150px;">
 				<div align="center">
 					<br>
-					<font color="white"><i class="fas fa-route fa-2x"></i></font>
+					<font color=#001a33><i class="fas fa-route fa-2x"></i></font>
 					<br>
 					<div class="counter">
 						
-						<font color="white"><h2 class="counter-count">220</h2> </font>
-						<font color="white"><b><p>Διαδρομές</p></b></font>
+						<font color=#001a33><h2 class="counter-count">220</h2> </font>
+						<font color=#001a33><b><p>Διαδρομές</p></b></font>
 						
 					</div>
 				</div>
