--- a/views/my_account.ejs
+++ b/views/my_account.ejs
@@ -13,15 +13,15 @@
 				<div class="col">
 				
 				
-					<h4><b>Username:</b>  <%= currentUser.username %> </h4>
-					<h4><b>Firstname:</b>  <%= currentUser.firstName %> </h4>
-					<h4><b>Lastname:</b>  <%= currentUser.lastName %> </h4>
+					<h4><b>Όνομα Χρήστη:</b>  <%= currentUser.username %> </h4>
+					<h4><b>Όνομα:</b>  <%= currentUser.firstName %> </h4>
+					<h4><b>Επώνυμο:</b>  <%= currentUser.lastName %> </h4>
 					<h4><b>Διεύθυνση:</b>  <%= currentUser.address %> </h4>
 					<h4><b>Ταχυδρομικός Κώδικας:</b>  <%= currentUser.postal_code %> </h4>
 					
 					<h4><b>Email:</b>  <%= currentUser.email %> </h4>
-					<h4><b>Phone:</b>  <%= currentUser.phone %> </h4>
-					<h4><b>Afm:</b>  <%= currentUser.AFM %> </h4>
+					<h4><b>Τηλέφωνο:</b>  <%= currentUser.phone %> </h4>
+					<h4><b>Κατηγορία:</b>  <%= currentUser.AFM %> </h4>
 					<br>
 					<a class="btn btn-sm btn-primary btn-danger back" href="/account">Επεξεργασία στοιχείων</a>
 					
