--- a/views/register.ejs
+++ b/views/register.ejs
@@ -337,9 +337,12 @@
 							</div>
 							
 							<div class="form-group">
-								<label>Αφμ</label>
-								<input class="form-control" type="number" name="AFM" placeholder="212393847">
-								<font color= "red"><div class="error" id="afmErr"></div></font>
+								<label>Κατηγορία</label>
+								<select class="form-control" name="AFM">
+									<option value="Καμια κατηγορια" >Καμία Κατηγορία</option>
+									<option value="Φοιτητικο" >Φοιτητικό</option>
+									<option value="ΑμΕα" >ΑμΕα</option>
+								</select>
 							</div>
 							
 							
