--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,7 +14,16 @@
 		
 		
 		
-		
+		<style>
+			.dropdown-menu {
+				border-top-left-radius: 15px;
+				border-top-right-radius: 15px;
+				border-bottom-left-radius: 15px;
+				border-bottom-right-radius: 15px;
+			}
+			
+
+		</style>
 	</head>
 
 	<body>
@@ -151,6 +160,16 @@
 					</li>
 					
 					
+					<li class="nav-item dropdown active">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						  <font color="white">Βοήθεια </font>
+						</a>
+						
+						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
+						  <a class="dropdown-item" href="#">Πως επαναφορτίζω την κάρτα μου</a>
+						  <a class="dropdown-item" href="#">Πώς αναζητώ μια διαδρομή</a>
+						</div>
+					</li>
 				</ul>
 		    </div>
 			
