--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,43 +1,69 @@
 		<br>
 		<br>
-		
+		<font color=#001a33>..</font>
 		
 		<footer class="page-footer font-small blue pt-4" style="background-color: #001a33;">
+		<br>
 			<div class="row">
 				<div class="col">
-		
-		
-		
-		
+					<div align="center">
+						<font color="white"><h4>Δρομολόγια</h4></font>
+						<br><br>
+						
+						<a class="btn" href="/anazitisi_diadromis" role="button"><font color="white">Δρομολόγια/Στάσεις</font></a> <br>
+						<a class="btn" href="/24wra_leoforeia" role="button"><font color="white">24ωρα Δρομολόγια</font></a>	<br>
+						<a class="btn" href="/nyxterina_dromologia" role="button"><font color="white">Νυχτερινά δρομολόγια</font></a>	<br>
+						<a class="btn" href="/dromologia_aerodromiou" role="button"><font color="white">Δρομολόγια προς αεροδρόμιο</font></a>	<br>
+						<a class="btn" href="/oles_oi_grammes" role="button"><font color="white">Όλες οι γραμμές</font></a>	
+						
+						
+					</div>
 				</div>
 				<div class="col">
-				
-				
-				
-				
-				
-				
+					<div align="center">
+						<font color="white"><h4>Εισιτήρια/Κάρτες</h4></font>
+						<br><br>
+						
+						<a class="btn" href="/epanafortisi_kartas" role="button"><font color="white">Επαναφόρτιση κάρτας</font></a> <br>
+						<a class="btn" href="/agora_eisitirion" role="button"><font color="white">Αγορά εισιτηρίων</font></a>	<br>
+						<a class="btn" href="/times_eisitirion" role="button"><font color="white">Τιμές εισιτηρίων</font></a>	<br>
+						<a class="btn" href="/dikaiologitika" role="button"><font color="white">Δικαιολογητικά έκδοσης κάρτας</font></a>	<br>
+						<a class="btn" href="/stathmoi_ekdosis" role="button"><font color="white">Σταθμοί έκδοσης καρτών</font></a>
+					
+					
+					</div>
 				</div>
 				<div class="col">
-				
-				
-			
-				
+					<div align="center">
+						<font color="white"><h4>ΑμΕα</h4></font>
+						<br><br>
+						
+						<a class="btn" href="/staseis_amea" role="button"><font color="white">Στάσεις με προεξοχές</font></a> <br>
+						<a class="btn" href="#" role="button"><font color="white">Εισιτήρια/Κάρτες</font></a>	<br>
+
+						
+					</div>
 				</div>
 				<div class="col">
-					<font color="white"><h4>Βρείτε μας στα</h4></font>
+					
+					<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/" role="button"><font color="white"><i class="fab fa-facebook fa-2x"> <font color= #001a33>.</font></i></font></a>
+					<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/" role="button"><font color="white"><i class="fab fa-twitter fa-2x"> <font color= #001a33>.</font></i></font></a>
+					<a target="_blank" rel="noopener noreferrer" href="https://twitter.com/" role="button"><font color="white"><i class="fab fa-instagram fa-2x"> </i></font></a>
+					<br><br><br>	
+					
+					<font color="white"><h4>Κεντρικά γραφεία:</h4></font>
 					<br>
 					
-					
-					<font color="white"><i class="fab fa-facebook fa-2x"> <font color= #001a33>.</font></i></font>
-					<font color="white"><i class="fab fa-twitter fa-2x"> <font color= #001a33>.</font></i></font>
-					<font color="white"><i class="fab fa-instagram fa-2x"> </i></font>
-						
+					<a target="_blank" rel="noopener noreferrer" href="https://www.google.com/maps/place/%CE%91%CE%B8%CE%B7%CE%BD%CE%AC%CF%82+67,+%CE%91%CE%B8%CE%AE%CE%BD%CE%B1+105+52/@37.9830944,23.7254154,17z/data=!3m1!4b1!4m5!3m4!1s0x14a1bd3ab2b3fc29:0xe94e13f45c5f86ca!8m2!3d37.9830944!4d23.7276041" role="button"><font color="white"><i class="fa fa-map-marker-alt"></i>  <font color=#001a33>..</font> Αθηνάς 67, 10552, Αθήνα</font></a>
+					<p></p>
+					<font color="white"><i class="fa fa-phone-alt"></i> <font color=#001a33>..</font>214.414.1352</font>
+					<p></p>
+					<font color="white"><i class="fa fa-envelope"></i> <font color=#001a33>..</font>oasa@gmail.com</font>
 				</div>
 				
 				
 			</div>
-			<br>
+			<br><br><br>
 			
 			
 			<div align="center">
