--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,40 +6,40 @@
 		<br>
 			<div class="row">
 				<div class="col">
-					<div align="center">
-						<font color="white"><h4>Δρομολόγια</h4></font>
-						<br><br>
+					
+						<font color="white"><h4 id="hh">Δρομολόγια</h4></font>
+						<br><br><br>
 						
-						<a class="btn" href="/anazitisi_diadromis" role="button"><font color="white">Δρομολόγια/Στάσεις</font></a> <br>
-						<a class="btn" href="/24wra_leoforeia" role="button"><font color="white">24ωρα Δρομολόγια</font></a>	<br>
-						<a class="btn" href="/nyxterina_dromologia" role="button"><font color="white">Νυχτερινά δρομολόγια</font></a>	<br>
-						<a class="btn" href="/dromologia_aerodromiou" role="button"><font color="white">Δρομολόγια προς αεροδρόμιο</font></a>	<br>
-						<a class="btn" href="/oles_oi_grammes" role="button"><font color="white">Όλες οι γραμμές</font></a>	
+						<a id="aa" class="btn" href="/anazitisi_diadromis" role="button"><font color="white">Δρομολόγια/Στάσεις</font></a> <br>
+						<a id="aa" class="btn" href="/24wra_leoforeia" role="button"><font color="white">24ωρα Δρομολόγια</font></a>	<br>
+						<a id="aa" class="btn" href="/nyxterina_dromologia" role="button"><font color="white">Νυχτερινά δρομολόγια</font></a>	<br>
+						<a id="aa" class="btn" href="/dromologia_aerodromiou" role="button"><font color="white">Δρομολόγια προς αεροδρόμιο</font></a>	<br>
+						<a id="aa" class="btn" href="/oles_oi_grammes" role="button"><font color="white">Όλες οι γραμμές</font></a>	
 						
 						
-					</div>
+					
+				</div>
+				<div class="col">
+					
+						<font color="white"><h4 id="hh">Εισιτήρια/Κάρτες</h4></font>
+						<br><br><br>
+						
+						<a id="aa" class="btn" href="/epanafortisi_kartas" role="button"><font color="white">Επαναφόρτιση κάρτας</font></a> <br>
+						<a id="aa" class="btn" href="/agora_eisitirion" role="button"><font color="white">Αγορά εισιτηρίων</font></a>	<br>
+						<a id="aa" class="btn" href="/times_eisitirion" role="button"><font color="white">Τιμές εισιτηρίων</font></a>	<br>
+						<a id="aa" class="btn" href="/dikaiologitika" role="button"><font color="white">Δικαιολογητικά έκδοσης κάρτας</font></a>	<br>
+						<a id="aa" class="btn" href="/stathmoi_ekdosis" role="button"><font color="white">Σταθμοί έκδοσης καρτών</font></a>
+					
+					
+					
 				</div>
 				<div class="col">
 					<div align="center">
-						<font color="white"><h4>Εισιτήρια/Κάρτες</h4></font>
-						<br><br>
+						<font color="white"><h4 id="hh">ΑμΕα</h4></font>
+						<br><br><br>
 						
-						<a class="btn" href="/epanafortisi_kartas" role="button"><font color="white">Επαναφόρτιση κάρτας</font></a> <br>
-						<a class="btn" href="/agora_eisitirion" role="button"><font color="white">Αγορά εισιτηρίων</font></a>	<br>
-						<a class="btn" href="/times_eisitirion" role="button"><font color="white">Τιμές εισιτηρίων</font></a>	<br>
-						<a class="btn" href="/dikaiologitika" role="button"><font color="white">Δικαιολογητικά έκδοσης κάρτας</font></a>	<br>
-						<a class="btn" href="/stathmoi_ekdosis" role="button"><font color="white">Σταθμοί έκδοσης καρτών</font></a>
-					
-					
-					</div>
-				</div>
-				<div class="col">
-					<div align="center">
-						<font color="white"><h4>ΑμΕα</h4></font>
-						<br><br>
-						
-						<a class="btn" href="/staseis_amea" role="button"><font color="white">Στάσεις με προεξοχές</font></a> <br>
-						<a class="btn" href="#" role="button"><font color="white">Εισιτήρια/Κάρτες</font></a>	<br>
+						<a id="aa" class="btn" href="/staseis_amea" role="button"><font color="white">Στάσεις με προεξοχές</font></a> <br>
+						<a id="aa" class="btn" href="#" role="button"><font color="white">Εισιτήρια/Κάρτες</font></a>	<br>
 
 						
 					</div>
@@ -59,15 +59,17 @@
 					<font color="white"><i class="fa fa-phone-alt"></i> <font color=#001a33>..</font>214.414.1352</font>
 					<p></p>
 					<font color="white"><i class="fa fa-envelope"></i> <font color=#001a33>..</font>oasa@gmail.com</font>
+					
 				</div>
 				
 				
 			</div>
-			<br><br><br>
+			<br><br>
 			
-			
+		
 			<div align="center">
-						
+				<a id="bottomright" href="#top"><font color="white"> <i class='far fa-arrow-alt-circle-up' style='font-size:30px'></i> </font></a>
+				<br>
 				<font color="white"><h5>Oasa : EAM Team 2019 - 2020</h5> </font>
 				<br>		
 			</div>
