--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,6 @@
 		<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		
 		
-		
 		<style>
 			.dropdown-menu {
 				border-top-left-radius: 15px;
@@ -22,7 +21,16 @@
 				border-bottom-right-radius: 15px;
 			}
 			
-
+			#hh {
+				position: absolute;
+				left: 100px;
+			}
+			
+			#aa {
+				position: absolute;
+				left: 87px;
+			}
+			
 		</style>
 	</head>
 
