--- a/views/home.ejs
+++ b/views/home.ejs
@@ -28,7 +28,7 @@
 						<p><small>Το πρώτο γράμμα <font color= "red">ΚΕΦΑΛΑΙΟ</font> και χωρίς <font color= "red">ΤΟΝΟΥΣ</font>.</small></p>
 					  </div>
 					  
-					  <button type="submit" class="btn btn-primary btn-sm active" style="float: right;">Αναζήτηση</button>
+					  <button type="submit" class="btn btn-primary btn-sm active" style="float: right;">Αναζήτηση  <i class="fa fa-search"></i></button>
 					</form>
 			  </div>
 			</div>
