--- a/views/partials/header_en.ejs
+++ b/views/partials/header_en.ejs
@@ -12,55 +12,84 @@
 		<script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 		<link rel="stylesheet" type="text/css" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 		
+		
+		<style>
+			.dropdown-menu {
+				border-top-left-radius: 15px;
+				border-top-right-radius: 15px;
+				border-bottom-left-radius: 15px;
+				border-bottom-right-radius: 15px;
+			}
+			
+			#hh {
+				position: absolute;
+				left: 100px;
+			}
+			
+			#aa {
+				position: absolute;
+				left: 87px;
+			}
+			
+		</style>
 	</head>
 
 	<body>
-	
-	
-	
-	
-		<div class="bg-top navbar-light">
-			<div class="container">
-				<div class="row no-gutters d-flex align-items-center align-items-stretch">
-					<div class="col-md-4 d-flex align-items-center py-4">
-						<a class="navbar-brand" href="/">Oasa</a>
-					</div>
-					<div class="col-lg-8 d-block">
-						<div class="row d-flex">
-							<div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
-								<div class="icon d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
-								<div class="text">
-									<span>Email</span>
-									<span>youremail@email.com</span>
-								</div>
-							</div>
-							<div class="col-md d-flex topper align-items-center align-items-stretch py-md-4">
-								<div class="icon d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-								<div class="text">
-									<span>Call</span>
-									<span>Call Us: + 1235 2355 98</span>
-								</div>
-							</div>
-							<div class="col-md topper d-flex align-items-center justify-content-end">
-								<p class="mb-0 d-block">
-									<a href="/" class="btn py-2 px-3 btn-primary">
-										<span>ΕΛΛΗΝΙΚΑ</span>
-									</a>
-								</p>
-							</div>
+		
+		
+		
+		<div class="container">
+			<div class="row">
+				<div class="col">
+				
+				
+					<a class="nav-link" href="/"><h2><font color="blue"><i class="fa fa-bus"></i></font><b> <font color="black">O</font><font color="blue">A</font><font color="black">SA</font> </b></h2></a>
+					<br>
+				
+				</div>
+				<div class="col">
+					
+					<h3>   </h3>
+					<font color="blue"><i class="fa fa-paper-plane-o fa-lg" aria-hidden="true"> </i></font> <b><font color="black"> Email </font> </b>
+					<br>
+					Oasa@gmail.com
+		 
+				</div>
+				<div class="col">
+				
+					<h3>   </h3>
+					<font color="blue"><i class="fa fa-phone fa-lg" aria-hidden="true"> </i></font> <b><font color="black"> Phone </font> </b>
+					<br>
+					210 25 10025
+				
+				</div>
+				<div class="col">
+					<div class="row">
+						<div class="col">
+							<p> </p>
+							<br>
+							<a class="btn btn-primary active btn-sm" href="/error_page" role="button">Simpler Site</a>
+						</div>
+					
+						<div class="col">
+							<p> </p>
+							<br>
+							<a class="btn btn-primary active btn-sm" href="/" role="button">Ελληνικά</a>
 						</div>
 					</div>
 				</div>
-			  </div>
+			</div>
 		</div>
 		
 		
 		
+		
+		
+		
 	
-		<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #d9d9d9;">
-		  <a class="navbar-brand" href="/"><b>OASA</b></a>
-		  
-		  
+		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #001a33;">
+		<div class="container"> 
+
 		  
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -70,16 +99,25 @@
 				<ul class="navbar-nav">
 					  
 					  
-					<li class="nav-item dropdown active">
-						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Routes
+					<li class="nav-item dropdown">  
+						<li class="nav-item active">
+						<a class="nav-link" href="/"><font color="white"><i class="fa fa-home"></i> Home </font></a>
+						</li>
+					</li>
+					
+					
+					
+					<li class="nav-item dropdown">
+						
+						<a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						  <font color="white">Routes </font>
 						</a>
 						
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<div class="dropdown-menu"  style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/anazitisi_diadromis">Routes/Stations</a>
 						  <a class="dropdown-item" href="/24wra_leoforeia">24-hour routes</a>
 						  <a class="dropdown-item" href="/nyxterina_dromologia">Nightime routes</a>
-						  <a class="dropdown-item" href="/24wra_leoforeia">Routes to airport</a>
+						  <a class="dropdown-item" href="/dromologia_aerodromiou">Routes to airport</a>
 						  <a class="dropdown-item" href="/oles_oi_grammes">All lines</a>
 						  
 						</div>
@@ -88,25 +126,25 @@
 					
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Tickets/Cards 
+						  <font color="white">Tickets/Cards </font>
 						</a>
 						
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/epanafortisi_kartas">Recharge Card</a>
 						  <a class="dropdown-item" href="/agora_eisitirion">Buy Tickets</a>
 						  <a class="dropdown-item" href="/times_eisitirion">Ticket Prices</a>
-						  <a class="dropdown-item" href="#">Papers to Make a Card</a>
-						  <a class="dropdown-item" href="#">Card Stations</a>
+						  <a class="dropdown-item" href="/dikaiologitika">Papers to Make a Card</a>
+						  <a class="dropdown-item" href="/stathmoi_ekdosis">Card Stations</a>
 						</div>
 					</li>
 					  
 					  
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  People with disabilities
+						  <font color="white">People with disabilities </font>
 						</a>
 						
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/staseis_amea">Stations with help</a>
 						  <a class="dropdown-item" href="#">Tickets/Cards</a>
 						</div>
@@ -114,35 +152,49 @@
 					
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="/anakoinoseis">News</a>
+						<a class="nav-link" href="/anakoinoseis"><font color="white">News </font></a>
 					</li>			
 					
 					
 					<li class="nav-item dropdown active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-						  Contact
+						  <font color="white">Contact </font>
 						</a>
 						
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/epikoinonia">Contact Information</a>
 						  <a class="dropdown-item" href="/parapona">Complaints</a>
 						</div>
 					</li>
 					
 					
+					<li class="nav-item dropdown active">
+						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+						  <font color="white">Help </font>
+						</a>
+						
+						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
+						  <a class="dropdown-item" href="#">How do I recharge my card</a>
+						  <a class="dropdown-item" href="#">How do I search for a route</a>
+						</div>
+					</li>
 				</ul>
 		    </div>
 			
 			
+			
+			
+			
+
 			<% if(typeof currentUser !== "undefined") {   %>  
 				<ul class="navbar-nav">
 					
 					<li class="nav-item dropleft active">
 						<a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-					        <font color="purple"> <b><%= currentUser.username  %></b> </font>
+					        <i class="fas fa-user-cog fa-md"> </i><font color=#1aff1a> <b><%= currentUser.username  %></b> </font>
 						</a>
 						
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+						<div class="dropdown-menu" style="background-color: #e6e6e6" aria-labelledby="navbarDropdownMenuLink">
 						  <a class="dropdown-item" href="/my_account">My Account</a>
 						  <a class="dropdown-item" href="/account">Account Settings</a>
 						  
@@ -155,23 +207,39 @@
 
 					
 					<li class="nav-item active">
-						<a class="nav-link" href="/logout"> <i class="fa fa-sign-out fa-xs"></i> Logout</a>
+						<a class="nav-link" href="/logout"><font color="white"><i class="fa fa-sign-out fa-md"></i> Logout </font></a>
 					</li>
 				</ul>
 		    <% }else{ %>
 				<ul class="navbar-nav">
 					<li class="nav-item active">
-						<a class="nav-link" href="/login"><i class="fa fa-sign-in fa-xs"></i> Login</a>
+						<a class="nav-link" href="/login"><font color="white"><i class="fa fa-sign-in fa-md"></i> Login </font></a>
 					</li>
 					<li class="nav-item active">
-						<a class="nav-link" href="/register"><i class="fa fa-user-plus fa-xs"></i> Register</a>
+						<a class="nav-link" href="/register"><font color="white"><i class="fa fa-user-plus fa-md"></i> Register </font></a>
 					</li>
 				</ul>
       	    <% } %>
 
+		</div>
 		</nav>
 		
 		
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 	<% if(error && error.length) { %>
