--- a/views/login.ejs
+++ b/views/login.ejs
@@ -114,12 +114,13 @@
 		<br>
 		<a href="javascript:history.back()">Πίσω</a>
 
+
+
+
+		<br><br><br><br><br>
+		<a href="/epanadora_kvdikou">Ξέχασα τον κωδικό μου</a>
 	</div>
 </div>
 
-<br><br><br><br><br><br>
-
 
 <% include partials/footer.ejs %>
-
-
